# disgusting-homework

./: README.md
data structure/: CMakeLists.txt  README.md
data structure/src/01merge_sort/: main.c  merge_sort.c
data structure/src/01merge_sort/sort/: 0  1  2  input.txt
data structure/src/02avl_tree/: 02avl_tree.h
data structure/src/03topological_sort/: topological_sort.c
data structure/src/05huffman_code/: huffman_code.c
data structure/src/08prim_kruskal/: prim_kruskal.c
data-structure/: CMakeLists.txt  README.md
data-structure/src/01merge_sort/: main.c  merge_sort.c  merge_sort.h
data-structure/src/01merge_sort/sort/: output.txt
data-structure/src/02avl_tree/: 02avl_tree.c  test.c
data-structure/src/04min_edit_distance/: min_edit_distance.c
data-structure/src/06dijkstra/: dijkstra.c
data-structure/src/07quick_sort/: quick_sort.c
